fix random order of lyrics

BUG: 464843